[project]
name = "familydash-ha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorlog>=6.9.0",
    "homeassistant>=2025.4.4",
    "ruff>=0.13.1",
]

[dependency-groups]
dev = [
    "homeassistant-stubs>=2025.4.4",
]
